feat: optimize